<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchcontact"
        android:title="Search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/deleteall"
        android:title="@string/delete_all"
        android:icon="@drawable/baseline_delete_sweep_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sort_name"
        android:title="@string/sort_by_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_phone"
        android:title="@string/sort_by_phone"
        app:showAsAction="never" />
</menu>
