<com.chauthai.swipereveallayout.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#2d3e52"
    app:dragEdge="right"
    app:mode="same_level">

    <!-- Rear layout (edit and delete buttons) -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact_edit"
            android:layout_width="73dp"
            android:layout_height="70dp"
            android:background="#178E9E"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_delete"
            android:layout_width="73dp"
            android:layout_height="70dp"
            android:background="#DA1A0C"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Front layout (contact layout) -->
    <RelativeLayout
        android:id="@+id/front_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#2d3e52"
        android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contactimg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/baseline_person_24"
        app:civ_border_color="#13b298"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@id/numberdial"
        android:layout_toEndOf="@id/contactimg"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/contact_name"
        android:textColor="#13b298"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/numberdial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/phone"
        app:tint="#13b298" />
</RelativeLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
